@@ -35,9 +35,6 @@ static map aliases = {
 	MAP("\17SNAME", "\17", 1),
 	MAP("\20ERL_VERSION", "\26", 1),
 	MAP("\5XECUTABLE_NAME", "\30", 1),
-	MAP("\15ATCH", "&", 1),
-	MAP("\20REMATCH", "`", 1),
-	MAP("\20OSTMATCH", "'", 1),
 	MAP("\20ERLDB", "\20", 1),
 	MAP("\14AST_PAREN_MATCH", "+", 1),
 	MAP("\14AST_SUBMATCH_RESULT", "\16", 1),
