@@ -2,6 +2,7 @@ Revision history for English-Name
 
 {{$NEXT}}
           - Include ppport.h for backwards compatibility
+          - Don't touch ${^MATCH} and friends
 
 0.001     2022-08-27 19:47:09+02:00 Europe/Amsterdam
           Initial release to an unsuspecting world
